# src/Identity/Application/Http/Requests/RecoveryUserLandingRequest.php
@@ -8,24 +8,29 @@ use Illuminate\Validation\Rules\Password;
 use OpenApi\Attributes\Property;
 use OpenApi\Attributes\Schema;
 
+/**
+ * @property
+ */
 #[Schema(
-    schema: "Identity_RegisterUserRequest",
+    schema: "Identity_RecoveryUserLandingRequest",
     properties: [
         new Property(
             property: "user",
             properties: [
-                new Property(property: "email", type: "string", format: "email", nullable: false),
-                new Property(property: "username", type: "string", nullable: false),
+                new Property(property: "username", type: "string", nullable: true),
                 new Property(property: "password", type: "string", format: "password", nullable: false),
                 new Property(property: "password_confirmation", type: "string", format: "password", nullable: false),
                 new Property(property: "master_password", type: "string", format: "password", nullable: false),
                 new Property(property: "master_password_confirmation", type: "string", format: "password", nullable: false),
             ],
         ),
+        new Property(
+            property: "fingerprint", type: "string", format: "json", nullable: true
+        )
     ],
     type: "object",
 )]
-class RegisterUserRequest extends FormRequest
+class RecoveryUserLandingRequest extends FormRequest
 {
     public function authorize(): bool
     {
@@ -34,21 +39,13 @@ class RegisterUserRequest extends FormRequest
 
     public function rules(): array
     {
-        $table = app(User::class)->getTableFullName();
-
         return [
-            'user.email' => 'required|email|unique:' . $table . ',email',
-            'user.username' => 'required|min:1|unique:' . $table . ',name',
             'user.password' => [
                 'required',
                 'confirmed', //password_confirmation
                 Password::min(5)->letters()->numbers()
             ],
-            'user.master_password' => [
-                'required',
-                'confirmed',
-                Password::min(6)->letters()->numbers()
-            ]
+            'fingerprint' => 'nullable|json',
         ];
     }
 
