# src/Identity/Domain/User/Models/Attributes/Fingerprint.php
@@ -1,18 +1,29 @@
 <?php
 
-namespace System\Domain\Settings\Models\Attributes;
+namespace Identity\Domain\User\Models\Attributes;
 
 use App\Models\Abstracts\AbstractValue;
 use JsonException;
 
-class Data extends AbstractValue
+class Fingerprint extends AbstractValue
 {
     private array $data;
-    public function __construct(?string $json)
+
+    public function __construct(?string $json, ?array $data = null)
     {
         $this->value = '[]';
         if (is_null($json)) {
+            if ($data) {
+                try {
+                    $this->value = json_encode($data, JSON_THROW_ON_ERROR);
+                    $this->data = $data;
+
+                    return;
+                } catch (JsonException $e) {
+                }
+            }
             $this->data = [];
+
             return;
         }
 
